@@ -1,3 +1,8 @@
+2008-05-06  Joshua Sumali  <jsumali@redhat.com>
+
+	* rt/net/sourceforge/jnlp/security/CertWarningPane.java: Get publisher
+	name from certificate instead of vendor field in jnlp file.
+
 2008-05-05  Lillian Angel  <langel@redhat.com>
 
 	* jconsole.desktop: Fixed typo.
